[gd_scene load_steps=14 format=2]

[ext_resource path="res://src/Bat.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Main.gd" type="Script" id=2]
[ext_resource path="res://src/Ball.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Enemy.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/ping_pong_8bit_plop.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/LeagueGothic-Regular.otf" type="DynamicFontData" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 640, 29.9375 )

[sub_resource type="DynamicFont" id=4]
size = 35
font_data = ExtResource( 6 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 359.5 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=6]
size = 30
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=7]
size = 45
font_data = ExtResource( 6 )

[node name="Main" type="Node2D"]
script = ExtResource( 2 )
ball_scene = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1280.0
margin_bottom = 720.0
rect_pivot_offset = Vector2( 440, 301 )
color = Color( 0.215686, 0.215686, 0.215686, 1 )

[node name="WallTop" type="StaticBody2D" parent="."]

[node name="Top" type="CollisionShape2D" parent="WallTop"]
position = Vector2( 640, -30.0625 )
shape = SubResource( 1 )

[node name="WallBottom" type="StaticBody2D" parent="."]

[node name="Bottom" type="CollisionShape2D" parent="WallBottom"]
position = Vector2( 640, 750 )
shape = SubResource( 1 )

[node name="BallSpawnLocation" type="Position2D" parent="."]
position = Vector2( 640, 360 )

[node name="Enemy" parent="." groups=["PaddleGroup"] instance=ExtResource( 4 )]
position = Vector2( 1210, 360 )

[node name="Start" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 576.0
margin_top = 360.0
margin_right = 704.0
margin_bottom = 421.0
custom_fonts/font = SubResource( 4 )
text = "Start!"

[node name="PlayerGoal" type="Area2D" parent="."]
position = Vector2( 0, 30 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerGoal"]
position = Vector2( -32, 330.5 )
shape = SubResource( 2 )

[node name="EnemyGoal" type="Area2D" parent="."]
position = Vector2( 1344, 31 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyGoal"]
position = Vector2( -32, 328.5 )
shape = SubResource( 2 )

[node name="Instructions" type="Label" parent="."]
margin_left = 554.0
margin_top = 294.0
margin_right = 727.0
margin_bottom = 343.0
custom_fonts/font = SubResource( 3 )
text = "First to 10 wins!"
align = 1

[node name="Bat" parent="." groups=["PaddleGroup"] instance=ExtResource( 1 )]
position = Vector2( 64, 360 )

[node name="PlayerScoreLabel" type="Label" parent="."]
margin_left = 49.0
margin_top = 39.0
margin_right = 130.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 5 )
text = "Player Score: 0"

[node name="EnemyScoreLabel" type="Label" parent="."]
margin_left = 1101.0
margin_top = 39.0
margin_right = 1226.0
margin_bottom = 76.0
custom_fonts/font = SubResource( 6 )
text = "Enemy Score: 0"

[node name="ScoreSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="TimerLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 592.0
margin_top = 166.0
margin_right = 688.0
margin_bottom = 209.0
custom_fonts/font = SubResource( 7 )
align = 1
valign = 1

[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="body_entered" from="PlayerGoal" to="." method="_on_PlayerGoal_body_entered"]
[connection signal="body_entered" from="EnemyGoal" to="." method="_on_EnemyGoal_body_entered"]
